k8s/templates/ingress.lib.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:template", "template")
#@ load("utils.star", "utils")

#@ # En test (cluster zaun) el Ingress se emite como MINION de un mergeable
#@ # ingress de F5 NIC: sin TLS, sin clase nginx y con los paths ya traducidos.
#@ # El TLS y el host los sostiene el master que emite getMasterIngress().
#@ # En pre-release/release (cluster piltover) NO cambia nada: piltover sigue
#@ # con ingress-nginx y su configuracion de siempre.
#@ def getIngress():
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #@ if utils.isTest():
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/path-regex: "case_insensitive"
    #@ else:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #@ end
    #@ if/end data.values.ingressAnnotations:
    _: #@ template.replace(data.values.ingressAnnotations)
  name: #@ utils.ingressName()
  namespace: #@ utils.namespaceName()
spec:
  #@ if/end utils.isTest():
  ingressClassName: f5-nginx
  #@ if data.values.ingressRules:
  rules: #@ utils.recursiveLookupForStringAndReplace(data.values.ingressRules, "##DEFAULT_SERVICE_NAME", utils.serviceName())
  #@ else:
  rules:
    - host: #@ utils.defaultHostname()
      http:
        paths:
          - backend:
              service:
                name: #@ utils.serviceName()
                port:
                  number: 80
            #@ if utils.isTest():
            path: /
            pathType: Prefix
            #@ else:
            path: /(.*)
            pathType: ImplementationSpecific
            #@ end
  #@ end
  #@ if not utils.isTest():
  tls:
    - hosts:
        #@ if data.values.ingressHosts:
        #@ for/end host in data.values.ingressHosts:
        - #@ host
        #@ else:
        - #@ utils.defaultHostname()
        #@ end
      secretName: #@ utils.certificateName()
  #@ end
#@ end

#@ # Solo en test. Es el dueno del host y del TLS del mergeable ingress.
#@ # Exactamente 1 rule y 0 paths, que es lo que exige NIC para un master.
#@ def getMasterIngress():
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.org/ssl-redirect: "True"
  name: #@ utils.masterIngressName()
  namespace: #@ utils.namespaceName()
spec:
  ingressClassName: f5-nginx
  rules:
    - host: #@ utils.defaultHostname()
  tls:
    - hosts:
        - #@ utils.defaultHostname()
      secretName: #@ utils.certificateName()
#@ end

#@ def getAdditionalIngresses():
#@   ingresses = []
#@   if data.values.additionalIngresses:
#@     for ingress in data.values.additionalIngresses:
#@       if not ingress.environment or ingress.environment == data.values.environment:
#@         if utils.isTest():
#@           annotations = {
#@             "nginx.org/mergeable-ingress-type": "minion",
#@             "nginx.org/path-regex": "case_insensitive"
#@           }
#@         else:
#@           annotations = {
#@             "kubernetes.io/ingress.class": "nginx",
#@             "cert-manager.io/issuer": "letsencrypt-prod",
#@             "nginx.ingress.kubernetes.io/rewrite-target": "/$1",
#@             "nginx.ingress.kubernetes.io/ssl-passthrough": "false",
#@             "nginx.ingress.kubernetes.io/ssl-redirect": "true",
#@             "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
#@           }
#@         end
#@         if ingress.annotations:
#@           annotations.update(ingress.annotations)
#@         end
#@         spec = {"rules": ingress.rules}
#@         if utils.isTest():
#@           spec["ingressClassName"] = "f5-nginx"
#@         else:
#@           spec["tls"] = ingress.tls
#@         end
#@         ingresses.append({
#@           "apiVersion": "networking.k8s.io/v1",
#@           "kind": "Ingress",
#@           "metadata": {
#@             "name": ingress.name,
#@             "namespace": utils.namespaceName(),
#@             "annotations": annotations
#@           },
#@           "spec": spec
#@         })
#@       end
#@     end
#@   end
#@   return ingresses
#@ end
